Cambios al pagar y a los filtros adriano